--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
-    "node-fetch": "^2.6.0"
+    "install": "^0.13.0",
+    "node-fetch": "^2.6.0",
+    "npm": "^7.15.1"
   }
 }
