--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server/index.js"
+    "start": "nodemon src/server/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +17,8 @@
     "install": "^0.13.0",
     "node-fetch": "^2.6.0",
     "npm": "^7.15.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
